fix the chi_stats value

--- a/stats_tests/chi_square.ipynb
+++ b/stats_tests/chi_square.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bd59a62d",
    "metadata": {},
    "outputs": [],
@@ -11,10 +11,17 @@
     "import scipy.stats as stat\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "observed = npy.array([20, 30, 40, 25, 10, 15])\n",
+    "expected = npy.array([25, 25, 32.5, 32.5,12.5, 12.5])\n",
+    "\n",
     "df = 2\n",
     "alpha = 0.05\n",
+    "\n",
+    "chi_stats = ((observed - expected) ** 2 / expected).sum()\n",
     "critical_value = stat.chi2.ppf(1-alpha, df)\n",
-    "chi_stats = 3.747"
+    "\n",
+    "print(f\"Calculated chi-square = {chi_stats:.3f}\")\n",
+    "print(f\"Critical value (chi2, df={df}, alpha={alpha}) = {critical_value:.3f}\")"
    ]
   },
   {
