till confidence interval

--- a/stats_tests/CI_z.ipynb
+++ b/stats_tests/CI_z.ipynb
@@ -3,30 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96036f60",
+   "id": "839ffe9e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confidence Interval: (222.12, 257.88)\n"
+      "Confidence Interval: (4.48, 4.78)\n"
      ]
     }
    ],
    "source": [
-    "import math\n",
+    "import numpy as npy\n",
     "import scipy.stats as stat\n",
     "\n",
-    "mean = 240\n",
-    "sdev = 25\n",
-    "n = 10\n",
+    "mean = 4.63\n",
+    "sdev = 0.54\n",
+    "n = 50\n",
+    "z = 1.960\n",
     "\n",
-    "df = n-1\n",
-    "alpha = 0.025\n",
-    "\n",
-    "t_value = stat.t.ppf(1-alpha, df)\n",
-    "moe = t_value * (sdev / math.sqrt(n))\n",
+    "se = sdev / npy.sqrt(n)\n",
+    "moe = z * se\n",
     "\n",
     "lower = mean - moe\n",
     "upper = mean + moe\n",
