advance visualization methods like (subplot, add_axes)

--- a/Data_Exploration/matplotlib.ipynb
+++ b/Data_Exploration/matplotlib.ipynb
@@ -153,7 +153,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# Matplotlib core has two components: 1) Figure 2) Areas\n",
+    "\n",
+    "# Figure class: represent the full drawing area/canvas that can hold one or more plots.\n",
+    "\n",
+    "figure = plt.figure(figsize=(5, 5), facecolor='skyblue')\n",
+    "\n",
+    "axes = figure.add_axes([0.1, 0.1, 0.5, 0.5]) # [left, bottom, width, height]\n",
+    "f = [10, 20, 30, 40]\n",
+    "g = [20, 25, 35, 55]\n",
+    "axes.plot(f, g)\n",
+    "\n",
+    "# plt.title(\"Simple Line Plot\")\n",
+    "# plt.xlabel(\"X-Axis\")\n",
+    "# plt.ylabel(\"Y-Axis\")\n",
+    "# plt.show()\n",
+    "\n",
+    "# Axes class: plotting area where data is drawn\n",
+    "\n",
+    "\n",
+    "axes.plot(g, f)\n",
+    "axes.set_title(\"Linear Graph\")\n",
+    "axes.set_xlabel(\"X-Axis\")\n",
+    "axes.set_ylabel(\"Y-Axis\")\n",
+    "axes.legend(labels=('line 1', 'line 2'))\n",
+    "plt.show()\n",
+    "\n",
+    "# There is subplot, and subplot2grid methods for advance visualization"
    ]
   }
  ],
