custom linear regression self fit and predict

--- a/Regression/multiple_linear.ipynb
+++ b/Regression/multiple_linear.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6d74dba8",
+   "execution_count": 33,
+   "id": "d12ca91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,13 @@
     "X = pd.DataFrame(diabities.data, columns=diabities.feature_names)\n",
     "y = pd.Series(diabities.target)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "bc075da5",
+   "execution_count": null,
+   "id": "b4249f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "941b1e43",
+   "id": "977538de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 151.34560454   37.90402135 -241.96436231  542.42875852  347.70384391\n",
-      " -931.48884588  518.06227698  163.41998299  275.31790158  736.1988589\n",
-      "   48.67065743]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myLr = MyLR()\n",
     "myLr.fit(X_train, y_train) \n",
