softmax in logisctic regression

--- a/classification/gradient_descent.ipynb
+++ b/classification/gradient_descent.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f2a79aaf",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,7 @@
     "  X, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
+    "# data ko ek level me kar dega\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n"
@@ -47,21 +48,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "91d8be21",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this here my friend is gradient descent\n",
+    "\n",
     "def fit_logistic_regression(X, y, lr=0.1, epoch=2500):\n",
     "  n_samples, n_features = X.shape\n",
     "\n",
     "  w = npy.zeros(n_features)\n",
     "  b = 0.0\n",
+    "  losses = []\n",
     "\n",
     "  for _ in range(epoch):\n",
     "    z = npy.dot(X, w) + b\n",
-    "\n",
     "    y_hat = sigmoid(z)\n",
+    "\n",
+    "    loss = -npy.mean(\n",
+    "      y * npy.log(y_hat + 1e-15) +\n",
+    "      (1 - y) * npy.log(1 - y_hat + 1e-15)\n",
+    "    )\n",
+    "    losses.append(loss)\n",
     "\n",
     "    dw = (1 / n_samples) * npy.dot(X.T, (y_hat-y))\n",
     "    db = (1 / n_samples) * npy.sum(y_hat-y)\n",
@@ -109,6 +118,29 @@
     "\n",
     "y_pred = predict(X_test, w, b)\n",
     "print(\"Test Accuracy: \", accuracy(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c568b990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sklearn accuracy:  0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "clf = LogisticRegression(max_iter=1000)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Sklearn accuracy: \", clf.score(X_test, y_test))"
    ]
   }
  ],
